Updated for checking
Changed query_wikiaves to correct audio to Sound
Added descriptions for some of the arguments in functions

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,15 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^docs$
+^pkgdown$
+^doc$
+^Meta$
+^testing$
+^README\.Rmd$
+^LICENSE\.md$
+LICENSE.md
+^codecov\.yml$
+^codemeta\.json$
+^\.github$
+^CONTRIBUTING\.md$
+^tic\.R$
