Added description for gbif_dataset_update

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     methods,
     pbapply,
     rjson,
-    utils
+    utils,
+    httr,
+    readr
 Suggests: 
     testthat (>= 3.0.0),
     leaflet,
