Updated tests for functions for workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(query_inaturalist)
 export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
+export(update_gbif_datasets)
 import(RCurl)
 import(jsonlite)
 import(parallel)
