fixing actions errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,12 @@ export(query_xenocanto)
 import(RCurl)
 import(jsonlite)
 import(parallel)
+importFrom(cli,cli_text)
 importFrom(cli,make_ansi_style)
 importFrom(cli,num_ansi_colors)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
 importFrom(methods,is)
 importFrom(utils,download.file)
+importFrom(utils,read.csv)
+importFrom(utils,write.csv)
