--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: suwo
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Marcelo Araya-Salas & Jorge Elizondo-Calvo
+Maintainer: Marcelo Araya-Salas <marcelo.araya@ucr.ac.cr>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
 Imports:
@@ -19,12 +19,17 @@ Imports:
     httr,
     readr
 Suggests: 
-    testthat (>= 3.0.0),
-    leaflet,
-    maps,
-    covr
+    covr,
+    testthat
 Depends:
      RCurl,
      jsonlite
 Config/testthat/edition: 3
 RoxygenNote: 7.2.3
+Authors@R: 
+    c(person("Marcelo", "Araya-Salas", 
+      role = c("aut", "cre"), 
+      email = "marcelo.araya@ucr.ac.cr", 
+      comment = c(ORCID = "0000-0003-3594-619X")),
+      person("Jorge", "Elizondo-Calvo", 
+      role = c("aut")))
