--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: suwo
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Access Nature Media Repositories Through R
 Version: 0.1.0
 Author: Marcelo Araya-Salas & Jorge Elizondo-Calvo
 Maintainer: Marcelo Araya-Salas <marcelo.araya@ucr.ac.cr>
