--- a/.github/workflows/tic.yml
+++ b/.github/workflows/tic.yml
@@ -51,6 +51,8 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+          use-public-rspm: ${{ runner.os != 'Windows' || matrix.config.r != '3.6' }}
           Ncpus: 4
 
       - uses: r-lib/actions/setup-tinytex@v2
