--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -20,7 +20,10 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+          http-user-agent: ${{ matrix.config.http-user-agent }}
+          use-public-rspm: ${{ runner.os != 'Windows' || matrix.config.r != '3.6' }}
           Ncpus: 4
+
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-tinytex@v2
@@ -64,7 +67,7 @@ jobs:
           path: ${{ runner.temp }}/package
 
 # added from codecov
-      - name: Upload coverage reports to Codecov
+      - name: Upload coverage reports to     Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
