--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(check_gbif_datasets)
 export(download_media)
 export(query_gbif)
 export(query_inaturalist)
+export(query_macaulay)
 export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
