Added taxon_code_search test
Added tests for taxon_code_search function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(query_macaulay)
 export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
+export(taxon_code_search)
 import(RCurl)
 import(jsonlite)
 import(parallel)
