Added support for map_instances
Function map_instances now generates interactive map for metadata from xenocanto.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(check_gbif_datasets)
 export(detect_duplicates)
 export(download_media)
+export(map_instances)
 export(query_gbif)
 export(query_inaturalist)
 export(query_macaulay)
