remove usage and a few other stuff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(check_gbif_datasets)
 export(detect_duplicates)
 export(download_media)
-export(map_instances)
+export(map_locations)
 export(query_gbif)
 export(query_inaturalist)
 export(query_macaulay)
@@ -23,3 +23,4 @@ importFrom(methods,is)
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
+importFrom(viridis,viridis)
