--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,17 +9,19 @@ URL: https://marce10.github.io/suwo/, https://github.com/maRce10/suwo
 BugReports: https://github.com/maRce10/suwo/issues/
 License: GPL (>= 2)
 Encoding: UTF-8
-LazyData: true
+LazyData: TRUE
 Imports:
     checkmate,
     cli,
     methods,
     pbapply,
     rjson,
-    utils
+    utils,
+    viridis
 Suggests: 
     covr,
-    testthat
+    testthat,
+    leaflet
 Depends:
      RCurl,
      jsonlite
