--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
 export(taxon_code_search)
+export(update_query)
 import(RCurl)
 import(jsonlite)
 import(parallel)
