fixing details on arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(cli,num_ansi_colors)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
 importFrom(methods,is)
+importFrom(rlang,arg_match)
 importFrom(utils,download.file)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
