--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     pbapply,
     rjson,
     utils,
-    viridis
+    viridis,
+    rlang
 Suggests: 
     covr,
     testthat,
@@ -25,10 +26,11 @@ Suggests:
     knitr,
     rmarkdown
 Depends:
-     RCurl,
-     jsonlite
+    RCurl,
+    jsonlite,
+    R (>= 2.10)
 Config/testthat/edition: 3
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Authors@R: 
     c(person("Marcelo", "Araya-Salas", 
       role = c("aut", "cre"), 
