--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Suggests:
     testthat,
     leaflet,
     knitr,
-    rmarkdown
+    rmarkdown,
+    kableExtra
 Depends:
     R (>= 2.10)
 Config/testthat/edition: 3
