--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(query_macaulay)
 export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
-export(taxon_code_search)
 export(update_query)
 import(RCurl)
 import(jsonlite)
@@ -21,6 +20,10 @@ importFrom(cli,num_ansi_colors)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
 importFrom(curl,has_internet)
+importFrom(kableExtra,cell_spec)
+importFrom(kableExtra,column_spec)
+importFrom(kableExtra,kable_styling)
+importFrom(kableExtra,kbl)
 importFrom(methods,is)
 importFrom(rlang,arg_match)
 importFrom(utils,download.file)
