homogenize time and date and more modularity

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Imports:
     RCurl,
     curl,
     jsonlite,
-    kableExtra
+    kableExtra,
+    lubridate,
+    tools
 Suggests: 
     covr,
     testthat,
