--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,8 +24,11 @@ importFrom(kableExtra,cell_spec)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,kbl)
+importFrom(lubridate,parse_date_time)
 importFrom(methods,is)
 importFrom(rlang,arg_match)
+importFrom(stats,setNames)
+importFrom(tools,file_ext)
 importFrom(utils,download.file)
 importFrom(utils,packageVersion)
 importFrom(utils,read.csv)
