update vignete and several functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports:
     jsonlite,
     kableExtra,
     lubridate,
-    tools
+    tools,
+    RecordLinkage
 Suggests: 
     covr,
     testthat,
