--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,21 @@
 
 export(check_gbif_datasets)
 export(download_media)
+export(find_duplicates)
 export(map_locations)
-export(merge_query_results)
+export(merge_metadata)
 export(query_gbif)
 export(query_inaturalist)
 export(query_macaulay)
 export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
-export(update_query)
+export(subset_metadata)
+export(update_metadata)
 import(RCurl)
 import(jsonlite)
 import(parallel)
+importFrom(RecordLinkage,compare.dedup)
 importFrom(cli,cli_text)
 importFrom(cli,make_ansi_style)
 importFrom(cli,num_ansi_colors)
@@ -27,6 +30,7 @@ importFrom(kableExtra,kbl)
 importFrom(lubridate,parse_date_time)
 importFrom(methods,is)
 importFrom(rlang,arg_match)
+importFrom(stats,complete.cases)
 importFrom(stats,setNames)
 importFrom(tools,file_ext)
 importFrom(utils,download.file)
