--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(query_macaulay)
 export(query_observation)
 export(query_wikiaves)
 export(query_xenocanto)
+export(remove_duplicates)
 export(subset_metadata)
 export(update_metadata)
 import(RCurl)
@@ -23,6 +24,8 @@ importFrom(cli,num_ansi_colors)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
 importFrom(curl,has_internet)
+importFrom(graphics,rasterImage)
+importFrom(jpeg,readJPEG)
 importFrom(kableExtra,cell_spec)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable_styling)
