fixing example code vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ importFrom(cli,num_ansi_colors)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
 importFrom(curl,has_internet)
+importFrom(fs,dir_tree)
 importFrom(graphics,rasterImage)
 importFrom(jpeg,readJPEG)
 importFrom(kableExtra,cell_spec)
