--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,16 +13,15 @@ export(query_wikiaves)
 export(query_xenocanto)
 export(remove_duplicates)
 export(update_metadata)
-import(RCurl)
 import(jsonlite)
 import(parallel)
+importFrom(RCurl,getURL)
 importFrom(RecordLinkage,compare.dedup)
 importFrom(cli,cli_text)
 importFrom(cli,make_ansi_style)
 importFrom(cli,num_ansi_colors)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
-importFrom(curl,has_internet)
 importFrom(fs,dir_tree)
 importFrom(graphics,rasterImage)
 importFrom(jpeg,readJPEG)
