fixed messaging function and unlinked verbose and pb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,23 +12,31 @@ export(query_wikiaves)
 export(query_xenocanto)
 export(remove_duplicates)
 export(update_metadata)
-import(jsonlite)
-import(parallel)
 importFrom(RecordLinkage,compare.dedup)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_text)
 importFrom(cli,make_ansi_style)
 importFrom(cli,num_ansi_colors)
+importFrom(cli,pluralize)
 importFrom(cli,style_bold)
 importFrom(cli,style_italic)
 importFrom(fs,dir_tree)
 importFrom(graphics,rasterImage)
 importFrom(jpeg,readJPEG)
+importFrom(jsonlite,fromJSON)
 importFrom(kableExtra,cell_spec)
 importFrom(kableExtra,column_spec)
 importFrom(kableExtra,kable_styling)
 importFrom(kableExtra,kbl)
 importFrom(lubridate,parse_date_time)
 importFrom(methods,is)
+importFrom(parallel,detectCores)
+importFrom(parallel,makePSOCKcluster)
+importFrom(parallel,mclapply)
+importFrom(parallel,parLapply)
 importFrom(rlang,arg_match)
 importFrom(stats,complete.cases)
 importFrom(stats,setNames)
