replace \dontrun with if(interactive())

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,12 +17,8 @@ importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
-importFrom(cli,cli_text)
-importFrom(cli,make_ansi_style)
-importFrom(cli,num_ansi_colors)
+importFrom(cli,cli_bullets)
 importFrom(cli,pluralize)
-importFrom(cli,style_bold)
-importFrom(cli,style_italic)
 importFrom(fs,dir_tree)
 importFrom(graphics,rasterImage)
 importFrom(jpeg,readJPEG)
