--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,5 +42,9 @@ Authors@R:
       email = "marcelo.araya@ucr.ac.cr", 
       comment = c(ORCID = "0000-0003-3594-619X")),
       person("Jorge", "Elizondo-Calvo", 
-      role = c("aut")))
+      role = c("aut")),
+      person("Alejandro", "Rico-Guevara", 
+      role = c("aut"), 
+      email = "colibri@uw.edu", 
+      comment = c(ORCID = "0000-0003-4067-5312")))
 VignetteBuilder: knitr
