added 'taxon_code' argument to query_macaulay() and fix file monitoring issues

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Authors@R:
       email = "marcelo.araya@ucr.ac.cr", 
       comment = c(ORCID = "0000-0003-3594-619X")),
       person("Jorge", "Elizondo-Calvo", 
-      role = c("aut")),
+      role = c("aut"), 
+      comment = c(ORCID = "0009-0004-5873-9585")),
       person("Alejandro", "Rico-Guevara", 
       role = c("aut"), 
       email = "colibri@uw.edu", 
