fix bug in q wikiaves

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(parallel,mclapply)
 importFrom(parallel,parLapply)
 importFrom(rlang,arg_match)
 importFrom(stats,complete.cases)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(tools,file_ext)
 importFrom(utils,download.file)
