fix api key and other small issues

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -27,7 +27,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      XENO_CANTO_API_KEY: ${{ secrets.XENO_CANTO_API_KEY }}
+      xc_api_key: ${{ secrets.XENO_CANTO_API_KEY }}
     steps:
       - uses: actions/checkout@v3
 
