--- a/.github/workflows/pkgcheck.yaml
+++ b/.github/workflows/pkgcheck.yaml
@@ -21,6 +21,6 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
-      XENO_CANTO_API_KEY: ${{ secrets.XENO_CANTO_API_KEY }}
+      xc_api_key: ${{ secrets.XENO_CANTO_API_KEY }}
     steps:
       - uses: ropensci-review-tools/pkgcheck-action@main
