--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      XENO_CANTO_API_KEY: ${{ secrets.XENO_CANTO_API_KEY }}
+      xc_api_key: ${{ secrets.XENO_CANTO_API_KEY }}
 
     steps:
       - uses: actions/checkout@v4
