--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ URL: https://marce10.github.io/suwo/, https://github.com/maRce10/suwo
 BugReports: https://github.com/maRce10/suwo/issues/
 License: GPL (>= 2)
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 Imports:
     checkmate,
     cli,
