Update pkgcheck workflow to ignore gh-pages branch
Ignore gh-pages branch for pkgcheck workflow

--- a/.github/workflows/pkgcheck.yaml
+++ b/.github/workflows/pkgcheck.yaml
@@ -10,8 +10,7 @@ on:
   workflow_dispatch:
   # Run on every push to main
   push:
-    branches:
-      - main
+    branches-ignore: [gh-pages]
 
 jobs:
   pkgcheck:
