Ignore gh-pages branch for README workflow

--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,8 +1,7 @@
 on:
   workflow_dispatch:
   push:
-    branches:
-    - main
+    branches-ignore: [gh-pages]
     paths:
       - README.Rmd
       - .github/workflows/readme.yml
